# aiogrammer

./: .gitignore  README.md  install_and_run.ps1  install_and_run.sh  pyproject.toml  requirements.txt
aiogrammer/: cli.py  copier.py  templates.py  ui.py
aiogrammer/modules/admin/: README.md  config.py  handlers.py  keyboards.py  module.yaml
aiogrammer/modules/antispam/: README.md  __init__.py  middleware.py  module.yaml
aiogrammer/modules/broadcast/: README.md  __init__.py  module.yaml  rabbitmq.py  requirements-amqp.txt  utils.py
aiogrammer/modules/i18n/: README.md  __init__.py  middleware.py  module.yaml
aiogrammer/modules/i18n/locales/: en.json  ru.json
aiogrammer/modules/pagination/: README.md  __init__.py  handlers.py  module.yaml  utils.py
aiogrammer/modules/roles/: README.md  __init__.py  middleware.py  module.yaml  permissions.py
aiogrammer/modules/security/: README.md  __init__.py  module.yaml  utils.py
aiogrammer/templates/default/: .env.example  README.md  requirements.txt  template.yaml
aiogrammer/templates/default/src/: config.py  main.py
aiogrammer/templates/minimal/: README.md  requirements.txt  template.yaml
aiogrammer/templates/minimal/src/: main.py
aiogrammer/templates/multibot/: .env.example  README.md  template.yaml
aiogrammer/templates/multibot/src/: main.py
aiogrammer/templates/quiz/: .env.example  README.md  requirements.txt  template.yaml
aiogrammer/templates/quiz/src/: config.py  db.py  logger.py  (+3 more)
aiogrammer/templates/support/: .env.example  README.md  template.yaml
tests/: test_copier.py  test_discovery.py
(+3 files in other folders)
